<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer Review"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
               android:layout_weight="1"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/customerReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See Reviews"
            android:textColor="#e28a1e"
            android:textSize="20sp"
            android:padding="10dp"/>

   </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#9E9E9E" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/reviewtitle"
            android:textColorHint="@color/colorHint"
            android:padding="5dp"
            >

            <EditText android:id="@+id/edtx_reviewtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/ReviewTitle"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/WriteReview"
            android:textColorHint="@color/colorHint"
            android:padding="5dp"
            >

            <EditText android:id="@+id/edtx_WriteReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/WriteReview"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <View
        android:id="@+id/line11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="#9E9E9E" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/layoutbuttons"
        >

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"/>

        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
 </LinearLayout>